--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -1,23 +1,23 @@
-<div class="itemBox__row">
-  <ul class="itemBox__rowInner">
-    <li class="itemBox__cell">
-      <div class="itemBox__cellInner">
-        <button class="itemBox__action">←</button>
+<div class="toolbox-table__row">
+  <ul class="toolbox-table__rowInner">
+    <li class="toolbox-table__cell">
+      <div class="toolbox-table__cellInner">
+        <button class="toolbox-table__action">←</button>
       </div>
     </li>
-    <li class="itemBox__cell text-center">
-      <div class="itemBox__cellInner">
-        <button class="itemBox__action">April</button>
+    <li class="toolbox-table__cell text-center">
+      <div class="toolbox-table__cellInner">
+        <button class="toolbox-table__action">April</button>
       </div>
     </li>
-    <li class="itemBox__cell text-center">
-      <div class="itemBox__cellInner">
-        <button class="itemBox__action">2018</button>
+    <li class="toolbox-table__cell text-center">
+      <div class="toolbox-table__cellInner">
+        <button class="toolbox-table__action">2018</button>
       </div>
     </li>
-    <li class="itemBox__cell text-right">
-      <div class="itemBox__cellInner">
-        <button class="itemBox__action">→</button>
+    <li class="toolbox-table__cell text-right">
+      <div class="toolbox-table__cellInner">
+        <button class="toolbox-table__action">→</button>
       </div>
     </li>
   </ul>
