--- a/_includes/blocks/popup/ms-row-reset-to-default.html
+++ b/_includes/blocks/popup/ms-row-reset-to-default.html
@@ -1,9 +1,9 @@
-<div class="itemBox__suggestions">
-  <div class="itemBox__row">
-    <ul class="itemBox__rowInner itemBox__rowInner--item JS_resetToDefault JS_itemBox--resetSuggestion" reset-file="columnpicker" style="display: none;">
-      <li class="itemBox__cell itemBox__cell--action">
-        <div class="itemBox__cellInner">
-          <button class="itemBox__action">Reset to default</button>
+<div class="toolbox-table__suggestions">
+  <div class="toolbox-table__row">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--item JS_resetToDefault JS_toolbox-table--resetSuggestion" reset-file="columnpicker" style="display: none;">
+      <li class="toolbox-table__cell toolbox-table__cell--action">
+        <div class="toolbox-table__cellInner">
+          <button class="toolbox-table__action">Reset to default</button>
         </div>
       </li>
     </ul>
