--- a/_includes/blocks/popup/ms-sublist-options.html
+++ b/_includes/blocks/popup/ms-sublist-options.html
@@ -1,9 +1,9 @@
-<div class="itemBox JS_itemBox--children JS_itemBox--children JS_itemBox--sublist itemBox--sublist JS_itemBox--columnpickerOptions JS_children-closed" style="display: none;">
+<div class="toolbox-table JS_toolbox-table--children JS_toolbox-table--children JS_toolbox-table--sublist toolbox-table--sublist JS_toolbox-table--columnpickerOptions JS_children-closed" style="display: none;">
   {% for item in site.data.ms-options.items %}
-  <div class="itemBox__row">
-    <ul class="itemBox__rowInner itemBox__rowInner--item">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner JS_toggle--options">
+  <div class="toolbox-table__row">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--item">
+      <li class="toolbox-table__cell">
+        <div class="toolbox-table__cellInner JS_toggle--options">
           <div class="selector selector--singleselect selector--required selector--expanded JS_selector">
             <div class="selector__item JS_selectorItem JS_columnPickerOption--enabled">
               <div class="selector__block">
