--- a/_includes/javascript/ms-toggle-columnpicker-option.html
+++ b/_includes/javascript/ms-toggle-columnpicker-option.html
@@ -1,5 +1,5 @@
-<li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-  <div class="itemBox__cellInner JS_toggle--columnpickerOptions">
+<li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action">
+  <div class="toolbox-table__cellInner JS_toggle--columnpickerOptions">
     {% include javascript/ms-columnpickerOption--disabled.html %}
   </div>
 </li>
