--- a/_includes/javascript/newSelectedItem--unit.html
+++ b/_includes/javascript/newSelectedItem--unit.html
@@ -1,4 +1,4 @@
-<div class="itemBox__cellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
+<div class="toolbox-table__cellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
 
   ${colorToggleHTML}
   <div class="selector selector--expanded selector--readonly selector--singleselect">
