--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,17 +1,17 @@
-<div class="itemBox__row">
-  <ul class="itemBox__rowInner itemBox__rowInner--item JS_filterableCell" style="display: none;">
-    <li class="itemBox__cell ${textActionClass}">
+<div class="toolbox-table__row">
+  <ul class="toolbox-table__rowInner toolbox-table__rowInner--item JS_filterableCell" style="display: none;">
+    <li class="toolbox-table__cell ${textActionClass}">
       ${newSelectedItemHTML}
     </li>
     ${columnPickerOptionBlock}
-    <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__cell--draggable">
-      <div class="itemBox__cellInner">
-        <i class="itemBox__action ">އ</i>
+    <li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action JS_toolbox-table__cell--draggable">
+      <div class="toolbox-table__cellInner">
+        <i class="toolbox-table__action ">އ</i>
       </div>
     </li>
-    <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_itemBox__action">
-      <div class="itemBox__cellInner">
-        <i class="itemBox__action itemBox__action--secondary JS_itemBox__action--remove"></i>
+    <li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action JS_toolbox-table__action">
+      <div class="toolbox-table__cellInner">
+        <i class="toolbox-table__action toolbox-table__action--secondary JS_toolbox-table__action--remove"></i>
       </div>
     </li>
   </ul>
