--- a/sass/app.scss
+++ b/sass/app.scss
@@ -34,7 +34,7 @@ body {
     background-color: #FFF;
     margin: 50px 5%;
   }
-  &.page-Itembox {
+  &.page-toolbox-table {
     background-color: #FFF;
     margin: 50px 5%;
   }
