--- a/_includes/blocks/app-nav/app-nav-tab2.html
+++ b/_includes/blocks/app-nav/app-nav-tab2.html
@@ -1,32 +1,32 @@
-<div class="itemBox">
-  <div class="itemBox__row">
-    <ul class="itemBox__rowInner">
-      <li class="itemBox__cell">
-        <div class= "itemBox__cellInner JS_text">
-          <input type="search" class="itemBox__input itemBox__input--fluid JS_appNav__filterInput" placeholder="filter through overview items">
+<div class="toolbox-table">
+  <div class="toolbox-table__row">
+    <ul class="toolbox-table__rowInner">
+      <li class="toolbox-table__cell">
+        <div class= "toolbox-table__cellInner JS_text">
+          <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_appNav__filterInput" placeholder="filter through overview items">
         </div>
       </li>
     </ul>
   </div>
   {% include blocks/popup/ms-row-use-global-search.html%}
-</div>{% comment %} /.itemBox {% endcomment %}
+</div>{% comment %} /.toolbox-table {% endcomment %}
 
-<div class="itemBox JS_appNavBox">
+<div class="toolbox-table JS_appNavBox">
   {% for group in site.data.app-nav-tab2.groups %}
-    <div class="itemBox__row">
-      <ul class="itemBox__rowInner itemBox__rowInner--item">
-        <li class="itemBox__cell itemBox__cell--action JS_toggle">
-          <div class="itemBox__cellInner">
-            <button class="itemBox__action">{{group.name}}{% if group.loadmore == "true"%}<sup>{{group.counter}}</sup>{% endif %}</button>
+    <div class="toolbox-table__row">
+      <ul class="toolbox-table__rowInner toolbox-table__rowInner--item">
+        <li class="toolbox-table__cell toolbox-table__cell--action JS_toggle">
+          <div class="toolbox-table__cellInner">
+            <button class="toolbox-table__action">{{group.name}}{% if group.loadmore == "true"%}<sup>{{group.counter}}</sup>{% endif %}</button>
           </div>
         </li>
       </ul>
-      <div class="itemBox JS_itemBox--children">
+      <div class="toolbox-table JS_toolbox-table--children">
         {% for item in group.items %}
-          <div class="itemBox__row">
-            <ul class="itemBox__rowInner itemBox__rowInner--item JS_filterableCell">
-              <li class="itemBox__cell itemBox__cell--permalink" tabindex="0">
-                <div class="itemBox__cellInner JS_text">
+          <div class="toolbox-table__row">
+            <ul class="toolbox-table__rowInner toolbox-table__rowInner--item JS_filterableCell">
+              <li class="toolbox-table__cell toolbox-table__cell--permalink" tabindex="0">
+                <div class="toolbox-table__cellInner JS_text">
                   {% assign selectorData = "," | append: item.prefix | append: "," | append: item.label | append: "," | append: item.name %}
                   {% include components/selector.html selectorData=selectorData expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
                 </div>
@@ -41,4 +41,4 @@
       </div>
     </div>
   {% endfor %}
-</div>{% comment %} /.itemBox {% endcomment %}
+</div>{% comment %} /.toolbox-table {% endcomment %}
