--- a/_includes/blocks/old-pmx/old-pmx-item-detail-panel.html
+++ b/_includes/blocks/old-pmx/old-pmx-item-detail-panel.html
@@ -94,7 +94,7 @@
 
     <div class="p-4">
       <h2 class="pagetitle">Bugs</h2>
-      {% include blocks/itembox/itembox.html %}
+      {% include blocks/toolbox-table/toolbox-table.html %}
     </div>
   </div>
   <!-- /.tab-content -->
