--- a/_includes/blocks/popup/ms-row-create-new.html
+++ b/_includes/blocks/popup/ms-row-create-new.html
@@ -1,8 +1,8 @@
-<div class="itemBox__row">
-  <ul class="itemBox__rowInner JS_createNewTag JS_filterableCell">
-    <li class="itemBox__cell itemBox__cell--action">
-      <div class="itemBox__cellInner JS_text">
-        <button class="itemBox__action">Create New</button>
+<div class="toolbox-table__row">
+  <ul class="toolbox-table__rowInner JS_createNewTag JS_filterableCell">
+    <li class="toolbox-table__cell toolbox-table__cell--action">
+      <div class="toolbox-table__cellInner JS_text">
+        <button class="toolbox-table__action">Create New</button>
       </div>
     </li>
   </ul>
