--- a/_includes/blocks/popup/ms-row-load-more.html
+++ b/_includes/blocks/popup/ms-row-load-more.html
@@ -1,8 +1,8 @@
-<div class="itemBox__row">
-  <ul class="itemBox__rowInner itemBox__rowInner--item itemBox__rowInner--action JS_loadMoreButton">
-    <li class="itemBox__cell itemBox__cell--action">
-      <div class="itemBox__cellInner">
-        <button class="itemBox__action">Load <span>25</span> more out of 75</button>
+<div class="toolbox-table__row">
+  <ul class="toolbox-table__rowInner toolbox-table__rowInner--item toolbox-table__rowInner--action JS_loadMoreButton">
+    <li class="toolbox-table__cell toolbox-table__cell--action">
+      <div class="toolbox-table__cellInner">
+        <button class="toolbox-table__action">Load <span>25</span> more out of 75</button>
       </div>
     </li>
   </ul>
