--- a/_includes/blocks/popup/ms-sublist-tags-colors-color.html
+++ b/_includes/blocks/popup/ms-sublist-tags-colors-color.html
@@ -1,10 +1,10 @@
-<div class="itemBox itemBox--sublist JS_itemBox--children JS_itemBox--children JS_itemBox--colors"  style="display: none;">
+<div class="toolbox-table toolbox-table--sublist JS_toolbox-table--children JS_toolbox-table--children JS_toolbox-table--colors"  style="display: none;">
   {% for item in site.data.color-sublist.items %}
-    <div class="itemBox__row">
-      <ul class="itemBox__rowInner itemBox__rowInner--item">
-        <li class="itemBox__cell">
-          <div class="itemBox__cellInner JS_itemBox__cellInner--color">
-            <div class="itemBox__action">
+    <div class="toolbox-table__row">
+      <ul class="toolbox-table__rowInner toolbox-table__rowInner--item">
+        <li class="toolbox-table__cell">
+          <div class="toolbox-table__cellInner JS_toolbox-table__cellInner--color">
+            <div class="toolbox-table__action">
               <div class="selector selector--expanded">
                 <div class="selector__item JS_selectorItem--active selector__item--selected">
                   <div class="selector__block">
