--- a/_includes/blocks/toolbox-table/toolbox-table-editable.html
+++ b/_includes/blocks/toolbox-table/toolbox-table-editable.html
@@ -1,6 +1,6 @@
 <header class="header header--section">
   <div class="header__title">
-    <h3 class="truncate">table section header above itemBox</h3>
+    <h3 class="truncate">table section header above toolbox-table</h3>
   </div>
   {% comment %} header actions {% endcomment %}
   <div class="header__actions">
@@ -8,17 +8,17 @@
     <button class="block-action"></button>
   </div>
 </header>
-{% comment %} ItemBox Div {% endcomment %}
-<div class="itemBox">
+{% comment %} toolbox-table Div {% endcomment %}
+<div class="toolbox-table">
   {% comment %} group for row and possible children {% endcomment %}
-  <div class="itemBox__row">
+  <div class="toolbox-table__row">
     {% comment %} row itself {% endcomment %} {% comment %} this is a thead row {% endcomment %}
-    <ul class="itemBox__rowInner itemBox__rowInner--thead">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--thead">
       {% comment %} cell, that contains only one icon is always flex-grow-0 {% endcomment %} {% comment %} if NO action, then empty cell, but the cell is still visible {% endcomment %} {% comment %} if there is an action in it, then it contans a button, otherwise
       only cellInner {% endcomment %} {% comment %} every header has the title as placeholder and can be used as filter {% endcomment %}
 
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell">
+        <div class="toolbox-table__cellInner">
           <div class="field">
             <div class="field__label">header cell 1</div>
             <div class="field__data">
@@ -29,8 +29,8 @@
           </div>
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-2">
+        <div class="toolbox-table__cellInner">
           <div class="field">
             <div class="field__label">header cell 2 with flex-grow-2</div>
             <div class="field__data">
@@ -45,16 +45,16 @@
   </div>
 
   {% comment %} group for row and possible children {% endcomment %}
-  <div class="itemBox__row">
+  <div class="toolbox-table__row">
     {% comment %} item row itself, this is an itemrow, a simple row{% endcomment %}
-    <ul class="itemBox__rowInner itemBox__rowInner--item">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--item">
+      <li class="toolbox-table__cell">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData=",,,395415" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-2">
+        <div class="toolbox-table__cellInner">
           <input class="field__input" type="text" value="Example data">
         </div>
       </li>
@@ -62,10 +62,10 @@
   </div>
 
   {% comment %} itemrow tfoot {% endcomment %}
-  <div class="itemBox__row">
-    <ul class="itemBox__rowInner itemBox__rowInner--tfoot">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner text-xs">All <span>423</span> items loaded</div>
+  <div class="toolbox-table__row">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--tfoot">
+      <li class="toolbox-table__cell">
+        <div class="toolbox-table__cellInner text-xs">All <span>423</span> items loaded</div>
       </li>
     </ul>
   </div>
