--- a/_includes/blocks/toolbox-table/toolbox-table-inner.html
+++ b/_includes/blocks/toolbox-table/toolbox-table-inner.html
@@ -1,4 +1,4 @@
-<div class="itemBox JS_itemBox--children">
+<div class="toolbox-table JS_toolbox-table--children">
   <header class="header header--table">
     <div class="header__title">
       <h2>Integrated Release Management</h2>
@@ -10,15 +10,15 @@
       <button class="block-action JS_has-popup" data-popid="#modal-columnpicker"></button>
     </div>
   </header>
-  <div class="itemBox__row">
-    <ul class="itemBox__rowInner itemBox__rowInner--thead">
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-        <div class="itemBox__cellInner">
-          <button class="itemBox__action"></button>
+  <div class="toolbox-table__row">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--thead">
+      <li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action">
+        <div class="toolbox-table__cellInner">
+          <button class="toolbox-table__action"></button>
         </div>
       </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell">
+        <div class="toolbox-table__cellInner">
           <div class="field">
             <div class="field__label">Nr</div>
             <div class="field__data">
@@ -29,8 +29,8 @@
           </div>
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-2">
+        <div class="toolbox-table__cellInner">
           <div class="field">
             <div class="field__label">Title</div>
             <div class="field__data">
@@ -41,8 +41,8 @@
           </div>
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-2">
+        <div class="toolbox-table__cellInner">
           <div class="field">
             <div class="field__label">Assigned to</div>
             <div class="field__data">
@@ -53,8 +53,8 @@
           </div>
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-3">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-3">
+        <div class="toolbox-table__cellInner">
           <div class="field">
             <div class="field__label">Reported by customer</div>
             <div class="field__data">
@@ -67,85 +67,85 @@
       </li>
     </ul>
   </div>
-  <div class="itemBox__row">
-    <ul class="itemBox__rowInner itemBox__rowInner--item">
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-        <div class="itemBox__cellInner"></div>
+  <div class="toolbox-table__row">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--item">
+      <li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action">
+        <div class="toolbox-table__cellInner"></div>
       </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData=",,,32072" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
-        <div class="itemBox__cellInner">Add indicators in import/export</div>
+      <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
+        <div class="toolbox-table__cellInner">Add indicators in import/export</div>
       </li>
-      <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-2">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData=",,,Jonathan Langens" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-3">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-3">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData="blue,,,281;green,,,282;salmon,,,283" multiselect="true" selectedIndexes="1,2,3" %}
         </div>
       </li>
     </ul>
   </div>
-  <div class="itemBox__row">
-    <ul class="itemBox__rowInner itemBox__rowInner--item">
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-        <div class="itemBox__cellInner"></div>
+  <div class="toolbox-table__row">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--item">
+      <li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action">
+        <div class="toolbox-table__cellInner"></div>
       </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData=",,,32750" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
-        <div class="itemBox__cellInner">Source files of project in sub-folders of install folder</div>
+      <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
+        <div class="toolbox-table__cellInner">Source files of project in sub-folders of install folder</div>
       </li>
-      <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-2">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData=",,,Koen" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-3">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-3">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData="gray,,,275;black,,,scripting:common" multiselect="true" selectedIndexes="1,2" %}
         </div>
       </li>
     </ul>
   </div>
-  <div class="itemBox__row">
-    <ul class="itemBox__rowInner itemBox__rowInner--item">
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-        <div class="itemBox__cellInner"></div>
+  <div class="toolbox-table__row">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--item">
+      <li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action">
+        <div class="toolbox-table__cellInner"></div>
       </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData=",,,32454" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink" tabindex="0">
-        <div class="itemBox__cellInner">Publish the "binary" and "selenium" (zip) packages as NuGet packages</div>
+      <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
+        <div class="toolbox-table__cellInner">Publish the "binary" and "selenium" (zip) packages as NuGet packages</div>
       </li>
-      <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-2">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData=",,,_Not Assigned" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
-      <li class="itemBox__cell flex-grow-3">
-        <div class="itemBox__cellInner">
+      <li class="toolbox-table__cell flex-grow-3">
+        <div class="toolbox-table__cellInner">
           {% include components/selector.html selectorData="gray,,,275;yellow,,,276" multiselect="true" selectedIndexes="1,2" %}
         </div>
       </li>
     </ul>
   </div>
-  <div class="itemBox__row">
-    <ul class="itemBox__rowInner itemBox__rowInner--tfoot">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner text-xs">All <span>423</span> items loaded</div>
+  <div class="toolbox-table__row">
+    <ul class="toolbox-table__rowInner toolbox-table__rowInner--tfoot">
+      <li class="toolbox-table__cell">
+        <div class="toolbox-table__cellInner text-xs">All <span>423</span> items loaded</div>
       </li>
     </ul>
   </div>
