--- a/_includes/popups/popup-copy-clipboard.html
+++ b/_includes/popups/popup-copy-clipboard.html
@@ -1,9 +1,9 @@
 <div class="modal" id="ms-copy-success">
-  <div class="itemBox">
-    <div class="itemBox__row">
-      <ul class="itemBox__rowInner itemBox__rowInner--custom">
-        <li class="itemBox__cell">
-          <div class="itemBox__cellInner">
+  <div class="toolbox-table">
+    <div class="toolbox-table__row">
+      <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
+        <li class="toolbox-table__cell">
+          <div class="toolbox-table__cellInner">
             <div class="note">
               <p>Item details copied to the clipboard.</p>
             </div>
@@ -16,11 +16,11 @@
 
 
 <div class="modal" id="ms-copy-error">
-  <div class="itemBox">
-    <div class="itemBox__row">
-      <ul class="itemBox__rowInner itemBox__rowInner--custom">
-        <li class="itemBox__cell">
-          <div class="itemBox__cellInner">
+  <div class="toolbox-table">
+    <div class="toolbox-table__row">
+      <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
+        <li class="toolbox-table__cell">
+          <div class="toolbox-table__cellInner">
             <div class="note note--error">
               <p>Error while copying to clipboard.</p>
             </div>
