--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -1,12 +1,12 @@
 <div class="modal" id="modal-breadcrumb">
 
-  <div class="itemBox JS_itemBox">
-    <div class="itemBox__row">
-      <ul class="itemBox__rowInner">
-        <li class="itemBox__cell">
-          <div class="itemBox__cellInner">
+  <div class="toolbox-table JS_toolbox-table">
+    <div class="toolbox-table__row">
+      <ul class="toolbox-table__rowInner">
+        <li class="toolbox-table__cell">
+          <div class="toolbox-table__cellInner">
 
-            <input type="search" class="itemBox__input itemBox__input--fluid JS_modal__filterInput JS_Breadcrumb_Input" placeholder="filter through mijlpaal items">
+            <input type="search" class="toolbox-table__input toolbox-table__input--fluid JS_modal__filterInput JS_Breadcrumb_Input" placeholder="filter through mijlpaal items">
 
           </div>
         </li>
@@ -14,13 +14,13 @@
     </div>
   </div>
 
-  <div class="itemBox JS_optionsChildren">
+  <div class="toolbox-table JS_optionsChildren">
     {% for item in site.data.breadcrumb-popup.items %}
-    <div class="itemBox__row">
-      <ul class="itemBox__rowInner itemBox__rowInner--item JS_filterableCell">
-        <li class="itemBox__cell itemBox__cell--permalink" tabindex="0">
-          <div class="itemBox__cellInner JS_text">
-            <div class="itemBox__value">{{item}}</div>
+    <div class="toolbox-table__row">
+      <ul class="toolbox-table__rowInner toolbox-table__rowInner--item JS_filterableCell">
+        <li class="toolbox-table__cell toolbox-table__cell--permalink" tabindex="0">
+          <div class="toolbox-table__cellInner JS_text">
+            <div class="toolbox-table__value">{{item}}</div>
           </div>
         </li>
       </ul>
@@ -28,7 +28,7 @@
     {% endfor %}
     {% include blocks/popup/ms-row-load-more.html %}
   </div>
-  {% comment %} /.itemBox {% endcomment %}
+  {% comment %} /.toolbox-table {% endcomment %}
 
 </div>
 {% comment %} /.modal {% endcomment %}
