--- a/_layouts/toolbox-table.html
+++ b/_layouts/toolbox-table.html
@@ -14,11 +14,11 @@
   {% include popups/modal-columnpicker.html %}
 
   <div class="modal" id="modal-error">
-    <div class="itemBox">
-      <div class="itemBox__row">
-        <ul class="itemBox__rowInner itemBox__rowInner--custom">
-          <li class="itemBox__cell">
-            <div class="itemBox__cellInner">
+    <div class="toolbox-table">
+      <div class="toolbox-table__row">
+        <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
+          <li class="toolbox-table__cell">
+            <div class="toolbox-table__cellInner">
               <div class="note note--error">
                 <p>Due date must be somewhere in the future.</p>
               </div>
