--- a/sass/components.scss
+++ b/sass/components.scss
@@ -7,7 +7,7 @@
 @import "components/comments.css";
 @import "components/field.css";
 @import "components/headers.css";
-@import "components/itembox.css";
+@import "components/toolbox-table.css";
 @import "components/modal.css";
 @import "components/note.css";
 @import "components/overlays.css";
